[gd_scene load_steps=5 format=2]

[ext_resource path="res://menus/itemButton.gd" type="Script" id=1]
[ext_resource path="res://gui/sprite_inventory_button.png" type="Texture" id=2]
[ext_resource path="res://particles/tinySparkle_16.png" type="Texture" id=3]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 64, 64 )
margin_left = 11.0
margin_right = 11.0
margin_top = 11.0
margin_bottom = 11.0

[node name="Control" type="Control"]
margin_right = 70.0
margin_bottom = 100.0
rect_min_size = Vector2( 70, 80 )
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_right = 70.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
custom_styles/normal = SubResource( 1 )

[node name="field_slotName" type="Label" parent="Button"]
margin_left = -32.0
margin_top = 75.0
margin_right = 102.0
margin_bottom = 89.0
text = "#NAME"
align = 1
valign = 1

[node name="sprite_itemIcon" type="Sprite" parent="Button"]
position = Vector2( 34.64, 35.4043 )
texture = ExtResource( 3 )

[node name="field_vaultIdx" type="Label" parent="Button"]
margin_left = 1.0
margin_top = 1.0
margin_right = 41.0
margin_bottom = 15.0
text = "idx:"
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
